add images with basic functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 	<body>
+	    <main>
+	        <div class="slider">
+	            <div class="slide active">
+	                <img src="img/aoraki.jpg">
+	            </div>
+	            <div class="slide">
+	                <img src="img/autumn.jpg">
+	            </div>
+	            <div class="slide">
+	                <img src="img/mountain.jpg">
+	            </div>
+	            <div class="slide">
+	                <img src="img/spring.jpg">
+	            </div>
+	            <div class="slide">
+	                <img src="img/suns-rays.jpg">
+	            </div>
+	        </div>
+	    </main>
 
 		<!-- Libraries JavaScript  -->
 		<script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
