new images, add button back

--- a/index.html
+++ b/index.html
@@ -38,8 +38,19 @@
 	            <div class="slide">
 	                <img src="img/suns-rays.jpg">
 	            </div>
+	            <div class="slide">
+	                <img src="img/lake.jpg">
+	            </div>
+	            <div class="slide">
+	                <img src="img/ulsan.jpg">
+	            </div>
 	        </div>
 	    </main>
+	    
+	    <a href="../" class="back_button">
+    		<img src="img/back.png"> 
+    		<div class="message">Back</div>
+    	</a>
 
 		<!-- Libraries JavaScript  -->
 		<script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
