add font awesome, add slider controls

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<title>Perspective Slider - dmsanchez86</title>
 
 		<!-- Stylesheets Lybraries -->
+		<link rel="stylesheet" type="text/css" href="stylesheets/fontawesome.css?ver=adfsdfsdfgsdfg">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css?ver=vxr67">
  
 		<!-- Favicon -->
@@ -22,27 +23,33 @@
 	</head>
 	<body>
 	    <main>
-	        <div class="slider">
-	            <div class="slide active">
+	        <div class="slider" slide="1">
+	            <div class="slide active" position="1">
 	                <img src="img/suns-rays.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="2">
 	                <img src="img/autumn.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="3">
 	                <img src="img/mountain.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="4">
 	                <img src="img/aoraki.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="5">
 	                <img src="img/spring.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="6">
 	                <img src="img/ulsan.jpg">
 	            </div>
-	            <div class="slide">
+	            <div class="slide" position="7">
 	                <img src="img/lake.jpg">
+	            </div>
+	            <div class="controls">
+	                <button id="last" type="button"><i class="fa fa-step-backward"></i></button>
+	                <button id="play" type="button"><i class="fa fa-play"></i></button>
+	                <button id="pause" type="button"><i class="fa fa-pause"></i></button>
+	                <button id="next" type="button"><i class="fa fa-step-forward"></i></button>
 	            </div>
 	        </div>
 	    </main>
