--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="author" content="Daniel Mauricio Sanchez Avila" />
-		<meta name="keywords" content="daniel,mauricio,dmsanchez86,daniel mauricio,daniel mauricio sanchez,portfolio,sitio web,website,personal,blog,projects,collaborations,colaboraciones,contacto" />
+		<meta name="keywords" content="daniel,mauricio,dmsanchez86,daniel mauricio,daniel mauricio sanchez,portfolio,sitio web,website,personal,blog,projects,collaborations,colaboraciones,contacto, perspective slider, slider 3d, 3d css,css3" />
 		<meta name="description" content="Daniel Mauricio Sanchez Front-End and Back-End Developer - Porfolio. See here my projects and collaborations made for me on the web. Visit my profile on GitHub." />
 		<meta name="Resource-type" content="Document" />
 		<meta name="Revisit-after" content="1 days" />
